--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "description": "A WhatsApp bot with rich and multiple functions",
-  "main": "./index.js",
-  "engines": {
-    "npm": ">=9.7.2",
-    "node": ">=20.0.0"
-  },
+  "name": "mega-md-pair",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node pair.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "baileys": "^6.7.19",
-    "qrcode": "^1.5.3",
-    "awesome-phonenumber": "^2.64.0",
-    "pino": "^8.17.0",
-    "phone": "^3.1.32",
-    "body-parser": "^1.20.2",
-    "express": "^5.0.0",
-    "path": "^0.12.7"
+    "@whiskeysockets/baileys": "^6.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "pino": "^9.0.0",
+    "qrcode": "^1.5.4"
   }
 }
