--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "mega-md-pair",
-  "type": "module",
-  "main": "index.js",
+  "description": "A WhatsApp bot with rich and multiple functions",
+  "main": "./index.js",
+  "engines": {
+    "npm": ">=9.7.2",
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node pair.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.7",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "pino": "^9.0.0",
-    "qrcode": "^1.5.4"
+    "baileys": "^6.7.19",
+    "qrcode": "^1.5.3",
+    "awesome-phonenumber": "^2.64.0",
+    "pino": "^8.17.0",
+    "phone": "^3.1.32",
+    "body-parser": "^1.20.2",
+    "express": "^5.0.0",
+    "path": "^0.12.7"
   }
 }
